<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="customer_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />
    <EditTextPreference
        android:defaultValue="@string/default_nepa_account_no"
        android:inputType="numberSigned"
        android:key="customer_number"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="Account Number" />
    <PreferenceScreen
        android:title="Account Settings"
        android:key="sub_preferences"
        android:summary="Valid Account">
        <EditTextPreference
            android:defaultValue="@string/def_email"
            android:inputType="textEmailAddress"
            android:key="email"
            android:maxLines="1"
            android:title="Your email address" />
        <EditTextPreference
            android:defaultValue="@string/def_phone"
            android:inputType="numberSigned"
            android:key="cust_phone"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Your Phone number" />
    </PreferenceScreen>
</PreferenceScreen>
