<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/background7"
    tools:context="com.fedironics.imeter.imetercustomer.LoginActivity">



    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/mywebgradienttrans"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:weightSum="1">
        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:srcCompat="@drawable/s5_logo"
            android:paddingLeft="82dp"
            android:gravity="right"
            android:layout_marginBottom="50dp"/>


        <EditText
            android:id="@+id/email"
            style="@style/transparent_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@android:drawable/sym_action_email"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/password"
            style="@style/transparent_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@android:drawable/ic_lock_idle_lock"
            android:gravity="center"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:shadowColor="@color/plainWhite"
            android:textColorHighlight="@color/plainWhite"/>


        <Button
            android:id="@+id/email_sign_in_button"
            style="@style/round_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:alpha="0.7"
                android:textAllCaps="true"
                android:clickable="true"
                android:gravity="center"
                android:padding="0dp"
                android:text="Forgot Password?"
                android:textColor="@color/plainWhite"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/sign_ulp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:alpha="0.7"
                android:textAllCaps="true"
                android:clickable="true"
                android:gravity="center"
                android:onClick="gotoRegister"
                android:padding="0dp"
                android:text="@string/sign_up_text"
                android:textColor="@color/plainWhite"
                android:textSize="13sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
