<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/register_layout"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background8"
    android:orientation="vertical"

    tools:context="com.fedironics.imeter.imetercustomer.RegisterActivity">



    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#40000000"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!-- Login progress -->
            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_pix"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="20dp"
                app:civ_border_width="1dp"
                android:alpha=".6"
                app:civ_border_color="@color/thickTransparentWhite"
                android:layout_gravity="center"
                android:src="@drawable/avatar_main">


            </de.hdodenhof.circleimageview.CircleImageView>


            <EditText
                android:id="@+id/name_reg"
                style="@style/transparent_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/ic_menu_myplaces"
                android:hint="Full Name"
                android:inputType="textCapWords"
                android:maxLines="1" />


            <AutoCompleteTextView
                android:id="@+id/email"
                style="@style/transparent_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/sym_action_email"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/phone"
                style="@style/transparent_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/stat_sys_speakerphone"
                android:hint="Phone Number"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                style="@style/transparent_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/ic_lock_idle_lock"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
           <EditText
                    android:id="@+id/password2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_again"
               android:drawableLeft="@android:drawable/ic_lock_idle_lock"
                    style="@style/transparent_edit"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            <Button
                android:id="@+id/email_sign_in_button"
                style="@style/round_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/sign_up"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>